<resources>
    <string name="app_name">Smart Playlist Manager for Spotify</string>

    <string name="title_activity_start">Smart Playlist Manager for Spotify</string>
    <string name="title_activity_tracklist">Saved Tracks</string>
    <string name="title_activity_edittags">Edit Tags</string>
    <string name="title_activity_editgenres">Edit Genre Tags</string>
    <string name="title_activity_editmoods">Edit Mood Tags</string>
    <string name="title_activity_createplaylist">Create Smart Playlist</string>

    <string name="action_settings">Settings</string>

    <string name="desc_albumart">Album art</string>
    <string name="desc_playpreview">Play preview track</string>
    <string name="desc_tags">Tags</string>
    <string name="desc_tag">Tag</string>
    <string name="desc_edittag">Edit tag</string>
    <string name="desc_deletetag">Delete tag</string>
    <string name="desc_next">Next</string>
    <string name="desc_newtag">New tag</string>
    <string name="desc_newlist">New playlist</string>

    <string name="placeholder_songtitle">Song Title</string>
    <string name="placeholder_artist">Artist</string>
    <string name="placeholder_album">Album</string>
    <string name="placeholder_taglist">Tag list</string>
    <string name="placeholder_tagname">(tag name)</string>

    <string name="button_editgenre">EDIT GENRE TAGS</string>
    <string name="button_editmood">EDIT MOOD TAGS</string>
    <string name="button_cancelchanges">CANCEL CHANGES</string>
    <string name="button_savechanges">SAVE CHANGES</string>
    <string name="button_continue">CONTINUE</string>

    <string name="tag_expanded">expanded</string>
    <string name="tag_collapsed">collapsed</string>

    <string name="txt_createtag">Create new tag</string>
    <string name="txt_manage">Manage Saved Tracks</string>
    <string name="txt_newplaylist">New Smart Playlist</string>
    <string name="txt_playlists">PLAYLISTS</string>
    <string name="txt_include">Include</string>
    <string name="txt_exclude">Exclude</string>
    <string name="txt_allmatching">all songs matching:</string>
    <string name="txt_and">and</string>
    <string name="txt_createfilter">Create new filter</string>
    <string name="desc_sync">Sync</string>
    <string name="txt_sync">Sync with Spotify</string>
    <string name="desc_includeexclude">Include or exclude</string>
    <string name="placeholder_filter">(filter text)</string>
    <string name="desc_deletefilter">Delete filter</string>
    <string name="desc_editfilter">Edit filter</string>
</resources>
