<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imgInclExcl"
        android:src="@drawable/playlist_plus"
        android:contentDescription="@string/desc_includeexclude" />

    <Space
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:id="@+id/space4" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/placeholder_filter"
        android:id="@+id/txtFilterDesc"
        android:gravity="center_vertical" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imgEditFilter"
        android:src="@drawable/edit_outline"
        android:contentDescription="@string/desc_editfilter"
        android:clickable="true"
        android:onClick="editFilter" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imgDeleteFilter"
        android:src="@drawable/x_box"
        android:contentDescription="@string/desc_deletefilter"
        android:onClick="deleteFilter" />

</LinearLayout>