<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:id="@+id/ll"
    android:clickable="true"
    android:onClick="toggleExpandCard"
    android:tag="@string/tag_collapsed"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/cv"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:id="@+id/album_thumbnail"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/album_placeholder"
                android:contentDescription="@string/desc_albumart"
                />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="70dp"
                android:id="@+id/playback_button"
                android:layout_alignParentEnd="false"
                android:layout_alignParentTop="true"
                android:src="@drawable/play_circle"
                android:contentDescription="@string/desc_playpreview"
                android:clickable="true"
                android:onClick="togglePlaybackPreview"
                android:layout_toStartOf="@+id/imgArrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/song_title"
                android:layout_toEndOf="@+id/album_thumbnail"
                android:layout_alignParentTop="true"
                android:textSize="15dp"
                tools:ignore="RelativeOverlap"
                android:text="@string/placeholder_songtitle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/artist"
                android:layout_toEndOf="@+id/album_thumbnail"
                android:layout_below="@+id/song_title"
                android:textSize="10dp"
                android:text="@string/placeholder_artist"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/album_name"
                android:layout_toEndOf="@+id/album_thumbnail"
                android:layout_below="@+id/artist"
                android:textSize="10dp"
                android:text="@string/placeholder_album"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:id="@+id/spacer1"
                android:layout_below="@+id/album_thumbnail"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgTag"
                android:layout_below="@+id/spacer1"
                android:layout_alignParentStart="true"
                android:src="@drawable/tag_outline"
                android:contentDescription="@string/desc_tags"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/placeholder_taglist"
                android:id="@+id/genreTags"
                android:layout_below="@+id/spacer1"
                android:layout_toEndOf="@+id/imgTag"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="13dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/placeholder_taglist"
                android:id="@+id/moodTags"
                android:layout_below="@+id/genreTags"
                android:layout_toEndOf="@+id/imgTag"
                android:layout_above="@+id/songRating"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="13dp"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/songRating"
                android:numStars="5"
                android:layout_below="@+id/imgTag"
                android:layout_centerHorizontal="true"
                style="@style/smallRatingBar" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/songRating">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/button_editgenre"
                    android:id="@+id/btnGenre"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:textStyle="bold"
                    android:background="@drawable/border_right"
                    android:clickable="true"
                    android:onClick="openGenreDialog" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/button_editmood"
                    android:id="@+id/btnMood"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:textStyle="bold"
                    android:background="@drawable/border_left"
                    android:clickable="true"
                    android:onClick="openMoodDialog" />
            </LinearLayout>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="70dp"
                android:id="@+id/imgArrow"
                android:src="@drawable/chevron_right"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@+id/spacer1" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>