<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kwohlford.smartplaylistmanager.StartActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/cv"
        android:clickable="true"
        android:onClick="manageSavedTracks">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical">

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:src="@drawable/tag_outline"
                android:contentDescription="@string/desc_tag" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_manage"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView3"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/desc_next" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/cv"
        android:id="@+id/spacer2"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/cv2"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spacer2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical">

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView4"
                android:src="@drawable/plus_circle"
                android:contentDescription="@string/desc_newlist" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_newplaylist"
                android:id="@+id/textView1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView5"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/desc_next" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/cv2"
        android:id="@+id/space2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_playlists"
        android:id="@+id/textView3"
        android:layout_below="@+id/space2"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

</RelativeLayout>
