<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kwohlford.smartplaylistmanager.tracklist.EditTagsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/layoutNewTag"
        android:clickable="true"
        android:onClick="addTag">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/plus_circle"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc_newtag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_createtag"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/space3"
            android:gravity="center_vertical"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView2"
            android:id="@+id/space3" />
    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tagList"
        android:layout_below="@+id/layoutNewTag"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        style="?android:attr/buttonBarStyle"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/tagList">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_cancelchanges"
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:onClick="closeCancel" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_savechanges"
            android:id="@+id/btnSave"
            android:layout_weight="1"
            android:onClick="closeSave" />
    </LinearLayout>

</RelativeLayout>
