<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    tools:context="com.kwohlford.smartplaylistmanager.playlist.CreatePlaylistActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/layoutNewCriteria"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="createCriteria">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/plus_circle"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc_newtag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_createfilter"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/imageView6"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/space7"
            android:gravity="center_vertical"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView6"
            android:id="@+id/space7" />
    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filterList"
        android:layout_below="@+id/layoutNewCriteria"
        android:layout_alignParentStart="true" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/filterList" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelchanges"
            android:id="@+id/button"
            android:layout_weight="1"
            android:onClick="closeCancel" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_continue"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:onClick="closeContinue" />
    </LinearLayout>

</RelativeLayout>
